# bisoft-postgresql-toolkit

./: .gitignore  Makefile  README.md  docker-compose.yml  password_check--1.0.sql  password_check.c  password_check.control
mongo_logs_extractor/: Dockerfile  README.md
mysql_logs_extractor/: README.md  docker-compose.yml
password_profile/: Cargo.toml  DEMO_TESTS.md  FEATURES.md  Makefile  README.md  USER_LEVEL_GUC.md  build.rs  install.sh  password_profile--1.0.sql  password_profile.bc  password_profile.c  password_profile.control  password_profile_pure.control  prepare_demo_server.sql
password_profile/SPECS/: password_profile-template.spec
password_profile/sql/: maintenance.sql  password_profile_pure--0.0.0.sql  password_profile_schema.sql  schema.sql
password_profile/src/: auth_event.rs  blacklist.rs  lib.rs  lock_cache.rs  sql.rs  structured_log.rs  worker.rs
password_profile/src/shim/: client_auth.c
password_profile/test/: README.md  run_tests.sh
password_profile/test/sql/: 01_password_complexity.sql  02_password_history.sql  03_failed_login_lockout.sql  04_blacklist.sql  05_password_expiration.sql  06_security_permissions.sql  07_user_level_guc.sql
pg_logger/: Cargo.toml  Dockerfile  README.md  config.toml
pg_logger/src/: main.rs
pg_logs_extractor/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
pg_logs_extractor/config/: servers.yml
pg_logs_extractor/docker/: README.md  docker-compose.yml  entrypoint.sh
pg_logs_extractor/docker/config/: Dockerfile
pg_logs_extractor/docker/docker/: entrypoint.sh
pg_logs_extractor/pipeline/: postgresql.conf
pg_logs_extractor/src/: main.rs
pgaudit_to_duckdb/: README.md  pg_audit_to_duckdb.py
sql_firewall/: Cargo.toml  (+23 more)
(+39 files in other folders)
