[package]
name = "pg_logs_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
regex = "1.10"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
chrono = "0.4"
